--- a/cp3-networkpolicy/egress/operators/bedrock-egress-egress-create-postgres-license-config.yaml
+++ b/cp3-networkpolicy/egress/operators/bedrock-egress-egress-create-postgres-license-config.yaml
@@ -1,21 +1,15 @@
-apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
+apiVersion: networking.k8s.io/v1
 metadata:
-  name: egress-cloud-native-postgresql
+  name: egress-create-postgres-license-config
   namespace: "opNamespace"
   labels:
     component: cpfs3
 spec:
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: cloud-native-postgresql
+      job-name: "create-postgres-license-config"
   egress:
-    - to:
-        - podSelector:
-            matchExpressions:
-              - key: k8s.enterprisedb.io/cluster
-                operator: Exists
-          namespaceSelector: {}
     - ports:
         - protocol: TCP
           port: 443
