--- a/cp3-networkpolicy/egress/operators/zen-egress-ibm-zen-setup-job.yaml
+++ b/cp3-networkpolicy/egress/operators/zen-egress-ibm-zen-setup-job.yaml
@@ -1,21 +1,15 @@
-apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
+apiVersion: networking.k8s.io/v1
 metadata:
-  name: egress-cloud-native-postgresql
+  name: egress-ibm-zen-setup-job
   namespace: "opNamespace"
   labels:
     component: cpfs3
 spec:
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: cloud-native-postgresql
+      app.kubernetes.io/name: "ibm-zen-setup-job"
   egress:
-    - to:
-        - podSelector:
-            matchExpressions:
-              - key: k8s.enterprisedb.io/cluster
-                operator: Exists
-          namespaceSelector: {}
     - ports:
         - protocol: TCP
           port: 443
