--- a/cp3-networkpolicy/egress/zen/zen-egress-edb-postgres.yaml
+++ b/cp3-networkpolicy/egress/zen/zen-egress-edb-postgres.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   name: egress-edb-postgres
-  namespace: "csNamespace"
+  namespace: "zenNamespace"
   labels:
     component: cpfs3
 spec:
