--- a/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-role.yaml
+++ b/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-role.yaml
@@ -22,6 +22,7 @@ rules:
       - policy
       - packages.operators.coreos.com
       - operator.ibm.com
+      - operators.coreos.com
     resources:
       - pods
       - pods/log
@@ -38,6 +39,7 @@ rules:
       - commonservice
       - packagemanifest
       - configmaps
+      - subscriptions
   - verbs:
       - get
       - list
