--- a/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-clusterrole.yaml
+++ b/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-clusterrole.yaml
@@ -1,5 +1,5 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
+kind: ClusterRole
 metadata:
   name: cpfs-util-cluster-role
   namespace: cs-op
