--- a/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-services-rolebinding.yaml
+++ b/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-services-rolebinding.yaml
@@ -1,14 +1,14 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: cpfs-util-cluster-rolebinding
+  name: cpfs-util-services-rolebinding
   namespace: <services namespace>
   labels:
     foundationservices.cloudpak.ibm.com: cpfs-util-backup
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: cpfs-util-cluster-role
+  name: cpfs-util-services-role
   namespace: <services namespace>
 subjects:
 - kind: ServiceAccount
