--- a/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-deployment.yaml
+++ b/velero/spectrum-fusion/cpfs-util-resources/cpfs-util-deployment.yaml
@@ -21,7 +21,7 @@ spec:
           - sh
           - -c
           - sleep infinity
-          image: icr.io/cpopen/cpfs/cpfs-utils:4.6.0
+          image: icr.io/cpopen/cpfs/cpfs-utils:4.6.1
           imagePullPolicy: IfNotPresent
           name: cpfs-util
           resources:
@@ -36,12 +36,8 @@ spec:
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           volumeMounts:
-          - mountPath: /cs-br/cpfs-util-backups
-            name: cpfs-util-mount
-          - name: scripts
-            mountPath: "/cs-br"
           - name: logs
-            mountPath: /scripts/logs
+            mountPath: /scripts/velero/schedule/tmp
         dnsPolicy: ClusterFirst
         schedulerName: default-scheduler
         securityContext:
@@ -50,12 +46,5 @@ spec:
         serviceAccountName: cpfs-util-sa
         terminationGracePeriodSeconds: 30
         volumes:
-        - name: cpfs-util-mount
-          persistentVolumeClaim:
-            claimName: cpfs-util-backup-pvc
-        - name: scripts
-          configMap:
-            name: cpfs-util-br-configmap
-            defaultMode: 0777
         - emptyDir: {}
           name: logs
