--- a/velero/spectrum-fusion/recipes/4.7-example-recipe-multi-ns.yaml
+++ b/velero/spectrum-fusion/recipes/4.7-example-recipe-multi-ns.yaml
@@ -227,6 +227,7 @@ spec:
       name: zen-crd
       type: resource
     - backupRef: zen-br-resources
+      labelSelector: foundationservices.cloudpak.ibm.com=zen5-data
       includeClusterResources: true
       includedResourceTypes:
         - serviceaccount
@@ -237,6 +238,7 @@ spec:
       type: resource
     - backupRef: zen-br-resources
       includeClusterResources: true
+      labelSelector: foundationservices.cloudpak.ibm.com=zen5-data
       includedResourceTypes:
         - deployments
       name: zen-deployment
@@ -256,6 +258,7 @@ spec:
       type: resource
     - backupRef: cs-db-br-resources
       includeClusterResources: true
+      labelSelector: foundationservices.cloudpak.ibm.com=cs-db-data
       includedResourceTypes:
         - serviceaccount
         - role
@@ -265,6 +268,7 @@ spec:
       type: resource
     - backupRef: cs-db-br-resources
       includeClusterResources: true
+      labelSelector: foundationservices.cloudpak.ibm.com=cs-db-data
       includedResourceTypes:
         - deployments
       name: cs-db-deployment
@@ -382,18 +386,6 @@ spec:
       onError: fail
       selectResource: pod
       timeout: 1200
-      type: check
-    - chks:
-        - condition: '{$.status.zenStatus} == {"Completed"}'
-          name: zenserviceReady
-          onError: fail
-          timeout: 1800
-      name: zen-check
-      nameSelector: test-zen
-      namespace: <service namespace>
-      onError: fail
-      selectResource: zen.cpd.ibm.com/v1/zenservice
-      timeout: 1800
       type: check
     - labelSelector: foundationservices.cloudpak.ibm.com=cpfs-util-backup
       name: setup-tenant
