--- a/cp3-networkpolicy/egress/flink/bedrock-egress-ibm-flink-operand.yaml
+++ b/cp3-networkpolicy/egress/flink/bedrock-egress-ibm-flink-operand.yaml
@@ -4,7 +4,9 @@ metadata:
   name: egress-ibm-flink-operand
   namespace: "flinkNamespace"
 spec:
-  podSelector: {}
+  podSelector: 
+    matchLabels:
+      type: flink-standalone-kubernetes
   egress:
     - ports:
         - protocol: TCP
@@ -14,6 +16,16 @@ spec:
       to:
         - podSelector:
             matchLabels:
-              type: flink-standalone-kubernetes
+              apiserver: 'true'
+          namespaceSelector: {}
+    - ports:
+      - protocol: TCP
+        port: 443
+      - protocol: TCP
+        port: 8081
+      - protocol: TCP
+        port: 9081
+      to:
+        - podSelector: {}
   policyTypes:
     - Egress
