--- a/cp3-networkpolicy/egress/opensearch/bedrock-egress-ibm-opensearch-operand.yaml
+++ b/cp3-networkpolicy/egress/opensearch/bedrock-egress-ibm-opensearch-operand.yaml
@@ -4,7 +4,9 @@ metadata:
   name: egress-ibm-opensearch-operand
   namespace: "opensearchNamespace"
 spec:
-  podSelector: {}
+  podSelector: 
+    matchLabels:
+      type: ibm-elasticsearch
   egress:
     - ports:
         - protocol: TCP
@@ -14,6 +16,16 @@ spec:
       to:
         - podSelector:
             matchLabels:
-              app.kubernetes.io/managed-by: ibm-elasticsearch
+              apiserver: 'true'
+          namespaceSelector: {}
+    - ports:
+      - protocol: TCP
+        port: 443
+      - protocol: TCP
+        port: 8081
+      - protocol: TCP
+        port: 9081
+      to:
+        - podSelector: {}
   policyTypes:
     - Egress
