--- a/velero/spectrum-fusion/backup_storage_location_secret.yaml
+++ b/velero/spectrum-fusion/backup_storage_location_secret.yaml
@@ -8,5 +8,5 @@ metadata:
     dp.isf.ibm.com/provider-name: isf-backup-restore
 data:
   access-key-id: <base 64 encoded access key id>
-  secret-access-key: <base 64 encoded secret-access-key>
+  secret-access-key: <base 64 encoded secret access key>
 type: Opaque
