--- a/velero/spectrum-fusion/recipes/4.7-example-recipe-multi-ns.yaml
+++ b/velero/spectrum-fusion/recipes/4.7-example-recipe-multi-ns.yaml
@@ -37,8 +37,23 @@ spec:
     - includeClusterResources: true
       includedResourceTypes:
         - customresourcedefinitions.apiextensions.k8s.io
+        - secrets
+        - ibmlicenseservicereporters.operator.ibm.com
       labelSelector: foundationservices.cloudpak.ibm.com=lsr
+      name: license-service-reporter-parent
+      type: resource
+    - backupRef: license-service-reporter-parent
+      includeClusterResources: true
+      includedResourceTypes:
+        - customresourcedefinitions.apiextensions.k8s.io
       name: license-service-reporter-crd
+      type: resource
+    - backupRef: license-service-reporter-parent
+      includeClusterResources: true
+      includedResourceTypes:
+        - secrets
+        - ibmlicenseservicereporters.operator.ibm.com
+      name: license-service-reporter-instances
       type: resource
     - labelSelector: foundationservices.cloudpak.ibm.com=licensing
       name: licensing-resources
@@ -67,13 +82,6 @@ spec:
       includedResourceTypes:
         - deployments
       name: lsr-deployment
-      type: resource
-    - includeClusterResources: true
-      includedResourceTypes:
-        - secrets
-        - ibmlicenseservicereporters.operator.ibm.com
-      labelSelector: foundationservices.cloudpak.ibm.com=lsr
-      name: license-service-reporter-instances
       type: resource
     - labelSelector: foundationservices.cloudpak.ibm.com=lsr-data
       name: lsr-volume
