--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -1,18 +1,19 @@
-imagePullPrefix: icr.io
-imagePullSecret: ibm-entitlement-key
-
 # Note there are no leading or trailing /'s
 imageRegistryNamespaceOperator: cpopen
 imageRegistryNamespaceOperand: cpopen/cpfs
 
+# Commented out values are handled by a global values file
+# imagePullPrefix: icr.io
+# imagePullSecret: ibm-entitlement-key
+
 # other configuration you think you might need for your operator
 # following are examples, not required:
-operatorNamespace: ""
-servicesNamespace: ""
+# operatorNamespace: ""
+# servicesNamespace: ""
 
 # CR configurations
 
 commonServiceSpec:
-  license:
-    accept: false
+  # license:
+  #   accept: false
   size: starterset
