--- a/helm/templates/rbac.yaml
+++ b/helm/templates/rbac.yaml
@@ -3,7 +3,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata: 
   name: ibm-common-service-operator
-  namespace: {{ .Values.operatorNamespace }}
+  namespace: {{ .Values.global.operatorNamespace }}
 roleRef: 
   kind: Role
   apiGroup: rbac.authorization.k8s.io
@@ -11,14 +11,14 @@ roleRef:
 subjects:   
   - kind: ServiceAccount
     name: ibm-common-service-operator
-    namespace: {{ .Values.operatorNamespace }}
+    namespace: {{ .Values.global.operatorNamespace }}
 ---
 
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata: 
   name: ibm-common-service-operator
-  namespace: {{ .Values.operatorNamespace }}
+  namespace: {{ .Values.global.operatorNamespace }}
 rules:   
   - apiGroups: 
       - ""
@@ -296,7 +296,7 @@ roleRef:
 subjects:   
   - kind: ServiceAccount
     name: ibm-common-service-operator
-    namespace: {{ .Values.operatorNamespace }}
+    namespace: {{ .Values.global.operatorNamespace }}
 
 ---
 
@@ -304,4 +304,4 @@ apiVersion: v1
 kind: ServiceAccount
 metadata: 
   name: ibm-common-service-operator
-  namespace: {{ .Values.operatorNamespace }}
+  namespace: {{ .Values.global.operatorNamespace }}
