--- a/helm/templates/cr.yaml
+++ b/helm/templates/cr.yaml
@@ -13,4 +13,4 @@ spec:
   operatorNamespace: {{ .Values.global.operatorNamespace }}
   servicesNamespace: {{ .Values.global.instanceNamespace }}
   size: {{ .Values.commonServiceSpec.size }}
-  storageClass: {{  .Value.global.blockStorageClass}}
+  storageClass: {{ .Values.global.blockStorageClass }}
