revert value to empty state
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/bedrock-migration/values.yaml
+++ b/bedrock-migration/values.yaml
@@ -4,6 +4,6 @@ imEnabled: "true" #should this be a global value? Is there a better way to deter
 global:
   operatorNamespace: "cs-op"
   instanceNamespace: "cs-serv"
-  tetheredNamespaces: ["test"]
+  tetheredNamespaces: [""]
   imagePullPrefix: icr.io
   imagePullSecret: ibm-entitlement-key
