--- a/cp3-networkpolicy/egress/flink/bedrock-egress-ibm-flink-operand.yaml
+++ b/cp3-networkpolicy/egress/flink/bedrock-egress-ibm-flink-operand.yaml
@@ -27,6 +27,12 @@ spec:
         port: 8081
       - protocol: TCP
         port: 9081
+      - protocol: TCP
+        port: 6122
+      - protocol: TCP
+        port: 6123
+      - protocol: TCP
+        port: 6124
       to:
         - podSelector: {}
   policyTypes:
