--- a/velero/spectrum-fusion/recipes/dynamic-recipes/core/child-zen-recipe-2.10.0.yaml
+++ b/velero/spectrum-fusion/recipes/dynamic-recipes/core/child-zen-recipe-2.10.0.yaml
@@ -4,13 +4,15 @@ metadata:
   labels:
     dp.isf.ibm.com/parent-recipe: cpfs-parent-recipe
     dp.isf.ibm.com/parent-recipe-namespace: <parent recipe namespace>
-  name: zen-child
+  name: zen-child-<child recipe namespace>
   namespace: <child recipe namespace>
 spec:
   appType: common-service
   groups:
     - labelSelector: foundationservices.cloudpak.ibm.com=zen5-data
       name: zen-volume
+      includedNamespaces:
+        - <child recipe namespace>
       type: volume
     - includeClusterResources: true
       includedResourceTypes:
@@ -18,6 +20,8 @@ spec:
         - customresourcedefinitions.apiextensions.k8s.io
       labelSelector: foundationservices.cloudpak.ibm.com=zen
       name: zenservice
+      includedNamespaces:
+        - <child recipe namespace>
       type: resource
     - labelSelector: foundationservices.cloudpak.ibm.com=zen5-data
       includeClusterResources: true
@@ -27,12 +31,16 @@ spec:
         - rolebinding
         - configmaps
       name: zen-pre-deploy
+      includedNamespaces:
+        - <child recipe namespace>
       type: resource
     - includeClusterResources: true
       labelSelector: foundationservices.cloudpak.ibm.com=zen5-data
       includedResourceTypes:
         - deployments
       name: zen-deployment
+      includedNamespaces:
+        - <child recipe namespace>
       type: resource
   hooks:
     - chks:
