exclude one version of role and rolebinding to prevent partial fail
Signed-off-by: Ben Luzarraga <luzarragaben@gmail.com>

--- a/velero/restore/restore-cs-db.yaml
+++ b/velero/restore/restore-cs-db.yaml
@@ -12,6 +12,7 @@ spec:
   - backups.velero.io
   - restores.velero.io
   - resticrepositories.velero.io
+  - authorization.openshift.io
   hooks: {}
   includedNamespaces:
   - '*'
