--- a/velero/restore/restore-zen5-data.yaml
+++ b/velero/restore/restore-zen5-data.yaml
@@ -12,6 +12,7 @@ spec:
   - backups.velero.io
   - restores.velero.io
   - resticrepositories.velero.io
+  - authorization.openshift.io
   hooks: {}
   includedNamespaces:
   - '*'
