--- a/velero/restore/restore-cs-db.yaml
+++ b/velero/restore/restore-cs-db.yaml
@@ -12,7 +12,8 @@ spec:
   - backups.velero.io
   - restores.velero.io
   - resticrepositories.velero.io
-  - authorization.openshift.io
+  - roles.authorization.openshift.io
+  - rolebindings.authorization.openshift.io
   hooks: {}
   includedNamespaces:
   - '*'
