--- a/velero/spectrum-fusion/recipes/dynamic-recipes/core/child-nss-recipe.yaml
+++ b/velero/spectrum-fusion/recipes/dynamic-recipes/core/child-nss-recipe.yaml
@@ -26,7 +26,7 @@ spec:
           timeout: 600
       name: nss-check
       nameSelector: ibm-namespace-scope-operator
-      namespace: cs-op
+      namespace: <child recipe namespace>
       onError: fail
       selectResource: deployment
       timeout: 600
