--- a/velero/restore/restore-zen5-data.yaml
+++ b/velero/restore/restore-zen5-data.yaml
@@ -12,6 +12,8 @@ spec:
   - backups.velero.io
   - restores.velero.io
   - resticrepositories.velero.io
+  - roles.authorization.openshift.io
+  - rolebindings.authorization.openshift.io
   hooks: {}
   includedNamespaces:
   - '*'
